--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         }
     ],
     "require": {
-        "php": ">=7.4.0"
+        "php": "^7.2.5"
     },
     "autoload": {
         "psr-4": { "EmailReplyParser\\": "src/EmailReplyParser" }
